# cpp-workshops

./: CMakeLists.txt  LICENSE  README.md  test_main.cpp
src/: AbstractItem.cpp  AbstractItem.h  AbstractItemOnOffer.cpp  AbstractItemOnOffer.h  Book.cpp  Book.h  Cart.cpp  Cart.h  CartAble.h  DiscountVoucher.cpp  DiscountVoucher.h  GiftWrapping.cpp  GiftWrapping.h  PromotedBook.cpp  PromotedBook.h
